--- a/src/components/Sidenav/Sidenav.scss
+++ b/src/components/Sidenav/Sidenav.scss
@@ -1,10 +1,12 @@
-.sidenav {
+.header {
     position: fixed;
     width: 0px;
     height: 100vh;
     top: 0;
     left: 0;
     z-index: 10;
+    background-color: var(--background-primary-color);
+    box-shadow: 0 0 2px 2px var(--shadow-primary-color);
     overflow: hidden;
 
     @media screen and (min-width: 768px) {
@@ -16,4 +18,11 @@
     &--active {
         width: 300px;
     }
+}
+
+.sidenav {
+    display: grid;
+    grid-template-rows: min-content auto min-content;
+    row-gap: .5rem;
+    height: 100%;
 }
