--- a/src/components/TaskItem/TaskItem.scss
+++ b/src/components/TaskItem/TaskItem.scss
@@ -5,8 +5,8 @@
     column-gap: .8rem;
     padding: .5rem;
     border-radius: .3rem;
-    background-color: rgb(168, 168, 195);
-    border: 1px solid rgb(168, 168, 195);
+    background-color: var(--background-primary-color);
+    border: 1px solid var(--background-primary-color);
     cursor: pointer;
 
     &:hover {
