--- a/src/components/TaskList/TaskList.scss
+++ b/src/components/TaskList/TaskList.scss
@@ -1,5 +1,35 @@
 .task-list {
-    display: flex;
-    flex-direction: column;
-    row-gap: .3rem;
+    width: 100%;
+    height: 100%;
+    padding: 70px .5rem;
+    overflow: auto;
+    overflow-y: overlay;
+    background-color: var(--primary-color);
+
+    &::-webkit-scrollbar {
+        width: .5rem;
+        background-color: transparent;
+    
+        &-thumb {
+            border-radius: .2rem;
+            background-color: var(--scrollbar-foreground-color);
+            border: 1px solid transparent;
+            background-clip: padding-box;
+        }
+
+        &-track {
+            background-color: transparent;
+            margin-top: 60px;
+            margin-bottom: 68px;
+        }
+    }
+
+    &__content {
+        display: flex;
+        flex-direction: column;
+        row-gap: .3rem;
+        margin: 0 auto;
+        width: 100%;
+        max-width: 800px;
+    }
 }
