--- a/src/components/TaskHeader/TaskHeader.scss
+++ b/src/components/TaskHeader/TaskHeader.scss
@@ -12,4 +12,38 @@
     backdrop-filter: blur(5px);
     color: var(--text-color-light);
     box-shadow: 0 0 20px rgba(159, 179, 217, 0.8);
+
+    &__container {
+        margin: 0 auto;
+        width: 100%;
+        max-width: 800px;
+    }
+
+    &__content {
+        display: flex;
+        align-items: center;
+        column-gap: 1rem;
+    }
+}
+
+.task-header-menu {
+
+    &__icon {
+
+    }
+}
+
+.task-header-details {
+    display: flex;
+    align-items: center;
+    column-gap: .4rem;
+    font-size: var(--font-size-4);
+
+    &__title {
+
+    }
+
+    &__icon {
+
+    }
 }
