--- a/src/components/TaskItem/TaskItem.scss
+++ b/src/components/TaskItem/TaskItem.scss
@@ -64,7 +64,8 @@
     }
 
     &__title {
-        font-size: 1.2rem;
+        font-size: var(--font-size-6);
+        font-weight: var(--font-weight-medium);
     }
 
     &__options {
