--- a/src/components/TaskDetails/TaskDetails.scss
+++ b/src/components/TaskDetails/TaskDetails.scss
@@ -38,6 +38,68 @@
         background-color: transparent;
     }
 
+    &__input {
+        width: 20px;
+        height: 20px;
+        display: block;
+        position: relative;
+        justify-self: center;
+
+        &:hover .task-details__input-checkmark {
+            border: 2px solid var(--primary-color);
+        }
+
+        &-checkbox {
+            width: 0;
+            height: 0;
+            position: absolute;
+            opacity: 0;
+            cursor: pointer;
+
+            &:checked ~ .task-details__input-checkmark {
+                background-color: rgb(116, 141, 187);
+            }
+
+            &:checked ~ .task-details__input-checkmark::after {
+                display: block;
+            }
+        }
+
+        &-checkmark {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background-color: transparent;
+            border: 2px solid rgb(159, 160, 162);
+            cursor: pointer;
+            transition: .3s ease-out;
+
+            &::after {
+                content: '';
+                position: absolute;
+                display: none;
+                top: 2px;
+                left: 5px;
+                width: 3px;
+                height: 7px;
+                border: solid rgb(255, 255, 255);
+                border-width: 0 3px 3px 0;
+                transform: rotate(45deg);
+            }
+        }
+
+        &-checkbox {
+
+        }
+
+        &-checkmark {
+
+        }
+    }
+
     &__value {
         flex: 1;
         padding: 0 .2rem;
