Preparing the task deletion option

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,7 +23,8 @@
   --secondary-color: rgb(255, 165, 0);
   --background-primary-color: rgb(237, 241, 255);
   --background-secondary-color: rgb(227, 231, 245);
-  --border-primary-color: '';
+  --background-tertiary-color: rgb(248, 248, 248);
+  --border-primary-color: rgb(209, 209, 209);
   --text-primary-color: rgb(0, 0, 0);
   --text-secondary-color: '';
   --text-tertiary-color: rgb(159, 160, 162);
