--- a/src/components/TaskDetails/TaskDetails.scss
+++ b/src/components/TaskDetails/TaskDetails.scss
@@ -144,6 +144,7 @@
     &__description {
         width: 100%;
         padding: .7rem;
+        font-size: var(--font-size-6);
     }
 
     &__footer {
