--- a/src/components/AddTaskForm/AddTaskForm.scss
+++ b/src/components/AddTaskForm/AddTaskForm.scss
@@ -48,6 +48,29 @@
     }
 
     &__content {
-        
+        display: none;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        width: 140px;
+        height: 30px;
+        bottom: 0;
+        right: 30px;
+        border-radius: .5rem;
+        z-index: 2;
+        overflow: hidden;
+        background-color: var(--background-tertiary-color);
+        box-shadow: 0 0 10px 1 var(--shadow-primary-color);
+
+        &--active {
+            display: flex;
+        }
+
+        &__input {
+            padding: 0rem;
+            width: 100%;
+            height: 100%;
+            appearance: none;
+        }
     }
 }
