--- a/src/components/TaskDetails/TaskDetails.scss
+++ b/src/components/TaskDetails/TaskDetails.scss
@@ -1,18 +1,17 @@
 .task-details {
-    // width: 450px;
-    visibility: hidden;
     width: 0;
     height: 100vh;
     display: grid;
     grid-template-rows: auto min-content;
     row-gap: .5rem;
     position: relative;
+    visibility: hidden;
     background-color: rgb(237, 241, 255);
-    transition: 7s ease-out;
+    transition: .3s ease-out;
 
     &--active {
-        visibility: visible;
         width: 450px;
+        visibility: visible;
     }
 
     &__content {
