--- a/src/components/AddTaskForm/AddTaskForm.scss
+++ b/src/components/AddTaskForm/AddTaskForm.scss
@@ -9,10 +9,21 @@
     background-color: rgb(255, 255, 255);
     border-radius: .3rem;
     overflow: hidden;
+    transition: .3s ease-out;
 
     &__add {
-        padding: .6rem;
+        width: 40px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         font-size: var(--font-size-5);
+        border-radius: .3rem;
+        background-color: transparent;
+
+        &:hover {
+            background-color: var(--background-secondary-color);
+        }
 
         &-icon {
 
@@ -20,6 +31,7 @@
     }
 
     &__input {
+        width: 100%;
         height: 100%;
         padding: .6rem 0;
     }
@@ -28,12 +40,12 @@
         display: flex;
         font-size: var(--font-size-4);
     }
-
 }
 
 .task-form-option {
-    position: relative;
+    display: flex;
     cursor: pointer;
+    border-left: 2px solid var(--border-primary-color);
 
     &:hover {
         background-color: rgb(245, 247, 253);
@@ -44,33 +56,36 @@
     }
 
     &__icon {
-
+        font-size: var(--font-size-4);
     }
 
     &__content {
-        display: none;
+        display: flex;
         justify-content: center;
         align-items: center;
-        position: absolute;
-        width: 140px;
-        height: 30px;
-        bottom: 0;
-        right: 30px;
+        width: 0;
+        height: 100%;
         border-radius: .5rem;
         z-index: 2;
         overflow: hidden;
-        background-color: var(--background-tertiary-color);
         box-shadow: 0 0 10px 1 var(--shadow-primary-color);
+        transition: .3s ease-out;
 
         &--active {
-            display: flex;
+            width: 160px;
         }
+    }
 
-        &__input {
-            padding: 0rem;
-            width: 100%;
-            height: 100%;
-            appearance: none;
-        }
+    &__input {
+        padding: .4rem;
+        width: 100%;
+        height: 100%;
+        appearance: none;
+        font-size: var(--font-size-6);
+        display: flex;
+        background-color: transparent;
+        border: none;
+        outline: none;
+        cursor: pointer;
     }
 }
