--- a/src/components/Sidenav/Sidenav.scss
+++ b/src/components/Sidenav/Sidenav.scss
@@ -4,10 +4,11 @@
     height: 100vh;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 100;
     background-color: var(--background-primary-color);
     box-shadow: 0 0 2px 2px var(--shadow-primary-color);
     overflow: hidden;
+    transition: .3s ease-out;
 
     @media screen and (min-width: 768px) {
         display: block;
@@ -16,7 +17,14 @@
     }
 
     &--active {
-        width: 300px;
+
+        @media screen and (max-width: 767px) {  
+            width: 300px;
+        }
+
+        @media screen and (max-width: 480px) {
+            width: 100%;
+        }
     }
 }
 
