--- a/src/components/SidenavHeader/SidenavHeader.scss
+++ b/src/components/SidenavHeader/SidenavHeader.scss
@@ -37,3 +37,22 @@
         transition: .3s ease-out;
     }
 }
+
+.sidenav-header-logo {
+    padding: .6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .4rem;
+    font-size: var(--font-size-4);
+    color: var(--primary-color);
+    // text-shadow: 1px 2px 3px rgb(128, 128, 128);
+
+    &__icon {
+
+    }
+
+    &__title {
+        font-weight: var(--font-weight-bold);
+    }
+}
